--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,7 +6,7 @@ sql:
     queries: "./internal/adapters/sqlc/queries.sql"
     gen:
       go:
-        package: "repo"
+        package: "sqlc"
         out: "./internal/adapters/sqlc"
         sql_package: "pgx/v5"
         emit_json_tags: true
