--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,11 @@ services:
       - db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -h 127.0.0.1 -p 5432 -U ${DB_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 12
 
   sqlc:
     image: sqlc/sqlc:latest
@@ -17,18 +22,22 @@ services:
       - ./:/src
     command: ["generate"]
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   goose:
     image: kukymbr/goose-docker:latest
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       GOOSE_DRIVER: postgres
       GOOSE_DBSTRING: ${DB_URL}
+      PGUSER: ${DB_USER}
+      PGPASSWORD: ${DB_PASSWORD}
     volumes:
       - ./internal/adapters/migrations:/migrations
-    command: up
+    command: ["sh", "-c", "until pg_isready -h db -p 5432 -U ${DB_USER}; do sleep 1; done; goose up"]
 
   app:
     build:
@@ -37,10 +46,13 @@ services:
     environment:
       DB_URL: ${DB_URL}
       APP_PORT: ${APP_PORT}
+      PGUSER: ${DB_USER}
+      PGPASSWORD: ${DB_PASSWORD}
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
 volumes:
   db-data: {}
